# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/accessibility/services/test/aamstestmock.gni")
import("//build/test.gni")

module_output_path = "accessibility/framework_test"

###############################################################################
#1. intent(c++) get/set test without transport
config("module_private_config") {
  visibility = [ ":*" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  include_dirs = aams_mock_include_dirs
  include_dirs += [
    "//base/accessibility/common/log/include",
    "//base/accessibility/dummyData",
    "//base/accessibility/interfaces/innerkits/asacfwk/include",
    "//base/accessibility/interfaces/innerkits/common/include",
    "//base/accessibility/services/aams/include",
    "//base/accessibility/services/aams/test/mock/include",
    "//base/accessibility/services/aams/test/mock/include",
    "//base/accessibility/services/interface/include",
    "//base/accessibility/services/interface/include/parcel",
    "//base/accessibility/util/include",
    "//base/global/resmgr_standard/interfaces/innerkits/include",
    "//base/powermgr/power_manager/interfaces/innerkits/native/include",
    "//foundation",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/include/",
    "//foundation/aafwk/standard/frameworks/kits/appkit/native/app/include/",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager/include",
    "//foundation/aafwk/standard/interfaces/innerkits/app_manager/include/appmgr/",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//foundation/aafwk/standard/services/abilitymgr/include",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/common/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedschedule/samgr/services/samgr/native/include",
    "//foundation/graphic/standard/rosen/modules/render_service_base/include",
    "//foundation/multimedia/image_standard/interfaces/kits/native/include",
    "//foundation/multimodalinput/input/util/common/include",
    "//foundation/windowmanager/dm/include",
    "//foundation/windowmanager/interfaces/innerkits",
    "//foundation/windowmanager/interfaces/innerkits/dm",
    "//foundation/windowmanager/interfaces/innerkits/wm",
    "//third_party/json/include",
    "//utils/native/base/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "//utils/system/safwk/native/include",
    "mock",
  ]
  defines = [
    "AAMS_LOG_TAG = \"accessibility_test\"",
    "AAMS_LOG_DOMAIN = 0xD005205",
  ]
}

################################################################################
ohos_unittest("accessibility_account_data_test") {
  module_out_path = module_output_path

  sources = [
    "../src/accessibility_account_data.cpp",
    "mock/src/mock_accessible_ability_client_stub_impl.cpp",
    "mock/src/mock_accessible_ability_connection.cpp",
    "mock/src/mock_accessible_ability_manager_service_state_observer_proxy.cpp",
    "mock/src/mock_accessible_ability_manager_service_state_observer_stub.cpp",
    "unittest/accessibility_account_data_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [ ":module_private_config" ]

  deps = [
    "//base/accessibility/interfaces/innerkits/common:accessibility_common",
    "//base/accessibility/services/aams:accessibleabilityms",
    "//base/accessibility/services/interface:aams_interface",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
  ]
}

################################################################################
ohos_unittest("accessible_ability_manager_service_test") {
  module_out_path = module_output_path
  sources = [
    "mock/src/aafwk/mock_bundle_manager.cpp",
    "mock/src/mock_accessibility_element_operator_callback_stub.cpp",
    "mock/src/mock_accessible_ability_client_stub_impl.cpp",
    "mock/src/mock_accessible_ability_manager_service_state_observer_proxy.cpp",
    "mock/src/mock_accessible_ability_manager_service_state_observer_stub.cpp",
    "mock/src/mock_common_event_data.cpp",
    "mock/src/mock_common_event_manager.cpp",
    "mock/src/mock_common_event_subscribe_info.cpp",
    "mock/src/mock_common_event_subscriber.cpp",
    "mock/src/mock_common_event_support.cpp",
    "mock/src/mock_matching_skill.cpp",
    "unittest/accessible_ability_manager_service_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [
    ":module_private_config",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base_public_config",
  ]

  deps = [
    "//base/accessibility/interfaces/innerkits/common:accessibility_common",
    "//base/accessibility/services/aams:accessibleabilityms",
    "//base/accessibility/services/interface:aams_interface",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:libdbinder",
    "os_account:os_account_innerkits",
    "samgr_standard:samgr_proxy",
  ]
}

################################################################################
ohos_unittest("accessibility_touch_guider_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_display_manager.cpp",
    "../src/accessibility_gesture_recognizer.cpp",
    "../src/accessibility_touch_guider.cpp",
    "../src/accessibility_window_connection.cpp",
    "../src/accessible_ability_manager_service_event_handler.cpp",
    "../src/json_utils.cpp",
    "//base/accessibility/services/interface/src/accessibility_element_operator_callback_stub.cpp",
    "//base/accessibility/services/interface/src/parcel/accessibility_element_info_parcel.cpp",
    "mock/src/mock_accessibility_account_data.cpp",
    "mock/src/mock_accessibility_common_event_registry.cpp",
    "mock/src/mock_accessibility_event_transmission.cpp",
    "mock/src/mock_accessibility_input_interceptor.cpp",
    "mock/src/mock_accessibility_window_manager.cpp",
    "mock/src/mock_accessible_ability_channel_proxy.cpp",
    "mock/src/mock_accessible_ability_client_proxy.cpp",
    "mock/src/mock_accessible_ability_connection.cpp",
    "mock/src/mock_accessible_ability_manager_service.cpp",
    "mock/src/mock_accessible_ability_manager_service_stub.cpp",
    "mock/src/mock_common_event_data.cpp",
    "mock/src/mock_common_event_manager.cpp",
    "mock/src/mock_common_event_subscribe_info.cpp",
    "mock/src/mock_common_event_subscriber.cpp",
    "mock/src/mock_common_event_support.cpp",
    "mock/src/mock_matching_skill.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessibility_touch_guider_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [
    ":module_private_config",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base_public_config",
  ]

  deps = [
    "//base/accessibility/interfaces/innerkits/common:accessibility_common",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "samgr_standard:samgr_proxy",
  ]
}

################################################################################
ohos_unittest("accessibility_common_event_registry_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_common_event_registry.cpp",
    "../src/accessible_ability_manager_service.cpp",
    "../src/json_utils.cpp",
    "//base/accessibility/frameworks/common/src/accessibility_caption.cpp",
    "//base/accessibility/frameworks/common/src/accessibility_event_info.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_channel_proxy.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_client_proxy.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_manager_service_stub.cpp",
    "mock/src/mock_accessibility_account_data.cpp",
    "mock/src/mock_common_event_data.cpp",
    "mock/src/mock_common_event_manager.cpp",
    "mock/src/mock_common_event_subscribe_info.cpp",
    "mock/src/mock_common_event_subscriber.cpp",
    "mock/src/mock_common_event_support.cpp",
    "mock/src/mock_matching_skill.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessibility_common_event_registry_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [
    ":module_private_config",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base_public_config",
  ]

  deps = [
    "//base/accessibility/interfaces/innerkits/common:accessibility_common",
    "//base/accessibility/services/aams:accessibleabilityms",
    "//base/accessibility/services/interface:aams_interface",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:libdbinder",
    "os_account:os_account_innerkits",
    "samgr_standard:samgr_proxy",
  ]
}

################################################################################
ohos_unittest("accessibility_input_interceptor_test") {
  module_out_path = module_output_path

  sources = [
    "../src/accessibility_display_manager.cpp",
    "../src/accessibility_input_interceptor.cpp",
    "../src/accessibility_zoom_handler.cpp",
    "../src/accessible_ability_manager_service_event_handler.cpp",
    "../src/json_utils.cpp",
    "//base/accessibility/frameworks/common/src/accessibility_ability_info.cpp",
    "//base/accessibility/frameworks/common/src/accessibility_caption.cpp",
    "//base/accessibility/frameworks/common/src/accessibility_event_info.cpp",
    "//base/accessibility/frameworks/common/src/accessibility_window_info.cpp",
    "//base/accessibility/services/aams/src/accessibility_common_event_registry.cpp",
    "//base/accessibility/services/aams/src/accessibility_event_transmission.cpp",
    "//base/accessibility/services/aams/src/accessible_ability_manager_service.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_channel_proxy.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_client_proxy.cpp",
    "mock/src/aafwk/mock_bundle_manager.cpp",
    "mock/src/mock_accessibility_account_data.cpp",
    "mock/src/mock_accessibility_gesture_recognizer.cpp",
    "mock/src/mock_accessibility_keyevent_filter.cpp",
    "mock/src/mock_accessibility_touchEvent_injector.cpp",
    "mock/src/mock_accessibility_touch_guider.cpp",
    "mock/src/mock_accessibility_window_manager.cpp",
    "mock/src/mock_accessibility_zoom_gesture.cpp",
    "mock/src/mock_accessible_ability_manager_service_stub.cpp",
    "unittest/accessibility_input_interceptor_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src
  sources += aams_mock_multimodalinput_src

  configs = [ ":module_private_config" ]

  deps = [
    "//base/accessibility/interfaces/innerkits/common:accessibility_common",
    "//base/accessibility/services/aams:accessibleabilityms",
    "//base/accessibility/services/interface:aams_interface",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
  ]
}

################################################################################
ohos_unittest("accessibility_window_manager_test") {
  module_out_path = module_output_path

  sources = [
    "../src/accessibility_window_connection.cpp",
    "../src/accessibility_window_manager.cpp",
    "../src/accessible_ability_manager_service_event_handler.cpp",
    "../src/json_utils.cpp",
    "//base/accessibility/services/aams/src/accessibility_account_data.cpp",
    "//base/accessibility/services/aams/src/accessibility_common_event_registry.cpp",
    "//base/accessibility/services/aams/src/accessible_ability_manager_service.cpp",
    "//base/accessibility/services/interface/src/accessibility_element_operator_callback_proxy.cpp",
    "//base/accessibility/services/interface/src/accessibility_element_operator_proxy.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_channel_proxy.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_client_proxy.cpp",
    "mock/src/aafwk/mock_bundle_manager.cpp",
    "mock/src/mock_rosen_window_info.cpp",
    "unittest/accessibility_window_manager_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [ ":module_private_config" ]

  deps = [
    "//base/accessibility/interfaces/innerkits/common:accessibility_common",
    "//base/accessibility/services/aams:accessibleabilityms",
    "//base/accessibility/services/interface:aams_interface",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
  ]
}

################################################################################
ohos_unittest("accessibility_keyevent_filter_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_keyevent_filter.cpp",
    "../src/accessibility_window_connection.cpp",
    "../src/accessible_ability_manager_service_event_handler.cpp",
    "../src/json_utils.cpp",
    "//base/accessibility/services/aams/src/accessibility_account_data.cpp",
    "//base/accessibility/services/aams/src/accessibility_common_event_registry.cpp",
    "//base/accessibility/services/aams/src/accessibility_event_transmission.cpp",
    "//base/accessibility/services/aams/src/accessible_ability_channel.cpp",
    "//base/accessibility/services/aams/src/accessible_ability_connection.cpp",
    "//base/accessibility/services/aams/src/accessible_ability_manager_service.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_channel_proxy.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_client_proxy.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_client_stub.cpp",
    "//base/accessibility/services/interface/src/accessible_ability_manager_service_stub.cpp",
    "mock/src/aafwk/mock_bundle_manager.cpp",
    "mock/src/mock_common_event_data.cpp",
    "mock/src/mock_common_event_manager.cpp",
    "mock/src/mock_common_event_subscribe_info.cpp",
    "mock/src/mock_common_event_subscriber.cpp",
    "mock/src/mock_common_event_support.cpp",
    "mock/src/mock_matching_skill.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessibility_keyevent_filter_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [
    ":module_private_config",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base_public_config",
  ]

  deps = [
    "//base/accessibility/interfaces/innerkits/common:accessibility_common",
    "//base/accessibility/services/aams:accessibleabilityms",
    "//base/accessibility/services/interface:aams_interface",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc:libdbinder",
    "os_account:os_account_innerkits",
    "samgr_standard:samgr_proxy",
  ]
}

################################################################################
ohos_unittest("accessible_ability_connection_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_account_data.cpp",
    "../src/accessibility_common_event_registry.cpp",
    "../src/accessibility_display_manager.cpp",
    "../src/accessibility_event_transmission.cpp",
    "../src/accessibility_gesture_recognizer.cpp",
    "../src/accessibility_input_interceptor.cpp",
    "../src/accessibility_touchEvent_injector.cpp",
    "../src/accessibility_touch_guider.cpp",
    "../src/accessibility_window_connection.cpp",
    "../src/accessibility_window_manager.cpp",
    "../src/accessibility_zoom_gesture.cpp",
    "../src/accessibility_zoom_handler.cpp",
    "../src/accessible_ability_channel.cpp",
    "../src/accessible_ability_connection.cpp",
    "../src/accessible_ability_manager_service.cpp",
    "../src/accessible_ability_manager_service_event_handler.cpp",
    "../src/json_utils.cpp",
    "mock/src/aafwk/mock_ability_manager_client.cpp",
    "mock/src/aafwk/mock_bundle_manager.cpp",
    "mock/src/mock_accessibility_element_operator_callback_stub.cpp",
    "mock/src/mock_accessibility_element_operator_stub.cpp",
    "mock/src/mock_accessibility_keyevent_filter.cpp",
    "mock/src/mock_accessible_ability_channel_proxy.cpp",
    "mock/src/mock_accessible_ability_client_proxy.cpp",
    "mock/src/mock_accessible_ability_client_stub_impl.cpp",
    "mock/src/mock_accessible_ability_manager_service_state_observer_stub.cpp",
    "mock/src/mock_common_event_data.cpp",
    "mock/src/mock_common_event_manager.cpp",
    "mock/src/mock_common_event_subscribe_info.cpp",
    "mock/src/mock_common_event_subscriber.cpp",
    "mock/src/mock_common_event_support.cpp",
    "mock/src/mock_matching_skill.cpp",
    "unittest/accessible_ability_connection_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [
    ":module_private_config",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base_public_config",
  ]

  deps = [
    "//base/accessibility/interfaces/innerkits/common:accessibility_common",
    "//base/accessibility/services/interface:aams_interface",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "ipc:libdbinder",
    "os_account:os_account_innerkits",
  ]
}

################################################################################
ohos_unittest("accessibility_display_manager_test") {
  module_out_path = module_output_path
  sources = [
    "../src/accessibility_display_manager.cpp",
    "../src/json_utils.cpp",
    "unittest/accessibility_display_manager_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [
    ":module_private_config",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base_public_config",
  ]

  deps = [
    "//base/accessibility/services/interface:aams_interface",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "samgr_standard:samgr_proxy",
  ]
}

################################################################################
ohos_unittest("accessibility_touchevent_injector_test") {
  module_out_path = module_output_path
  sources = [
    "mock/src/mock_accessibility_common_event_registry.cpp",
    "mock/src/mock_accessibility_event_transmission.cpp",
    "mock/src/mock_accessible_ability_client_stub_impl.cpp",
    "mock/src/mock_common_event_data.cpp",
    "mock/src/mock_common_event_manager.cpp",
    "mock/src/mock_common_event_subscribe_info.cpp",
    "mock/src/mock_common_event_subscriber.cpp",
    "mock/src/mock_common_event_support.cpp",
    "mock/src/mock_matching_skill.cpp",
    "mock/src/mock_system_ability.cpp",
    "unittest/accessibility_touchEvent_injector_test.cpp",
  ]
  sources += aams_mock_distributeddatamgr_src

  configs = [
    ":module_private_config",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base_public_config",
  ]

  deps = [
    "//base/accessibility/interfaces/innerkits/common:accessibility_common",
    "//base/accessibility/services/aams:accessibleabilityms",
    "//base/accessibility/services/interface:aams_interface",
    "//base/global/resmgr_standard/frameworks/resmgr:global_resmgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
    "//foundation/windowmanager/utils:libwmutil",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "samgr_standard:samgr_proxy",
  ]
}

################################################################################
group("unittest") {
  testonly = true
  deps = []

  deps += [
    ":accessibility_account_data_test",
    ":accessibility_common_event_registry_test",
    ":accessibility_display_manager_test",
    ":accessibility_input_interceptor_test",
    ":accessibility_keyevent_filter_test",
    ":accessibility_touch_guider_test",
    ":accessibility_touchevent_injector_test",
    ":accessibility_window_manager_test",
    ":accessible_ability_connection_test",
    ":accessible_ability_manager_service_test",
  ]
}
